styles.css
/* ... */
        @media screen and (max-width: 800px) {
            #inicio .contenido .presentacon {
                padding: 0 20px;
                gap: 10px;
            }
            #inicio .contenido .presentacon h2{
                margin-top: 40px;
            }
            .btn #inicio .contenido .presentación a {
                padding: 12px 18px;
                font-size: 14px;
            }
            .botones-hero {
                flex-direction: column;
                align-items: center;
            }
            .redes {
                display: none;
            }
            nav {
                display: none;
            }
            nav.responsive {
                display: block;
                background-color: rgba(0, 0, 0, 0.75);
                backdrop-filter: blur(8px);
                width: 100%;
                position: absolute;
                top: 70px;
                left: 0;
                padding: 20px 0;
                border-bottom: 1px solid rgb(255, 255, 255, 0.1);
                animation: menuFade 0.3s ease
            }
            nav.responsive ul {
                display: block !important;
                text-align: center;
            }
            nav.responsive ul li {
                margin: 18px 0;
            }
            #icono-nav {
                display: block;
            }
            #inicio .contenido .presentacion h2 {
                font-size: 40px;
            }
            /* seccion SOBRE MI */
            #sobremi {
                padding: 50px 0;
                display: block;
            }
            #sobremi .contenedor-foto {
                max-width: 200px;
                margin: auto;
            }
            #sobremi .contenedor-foto img {
                padding: 8px;
            }
            #sobremi .sobremi .titulo-seccion {
                text-align: center;
            }
            #sobremi .sobremi h2 {
                font-size: 25px;
                text-align: center;
            }
            /* seccion MIS SERVICIOS */
            #servicios {
                padding: 50px 15px;
            }
            #servicios .fila {
                display: block;
            }
            #servicios .fila .servicio {
                margin: 10px auto;
            }
            /* seccion HABLIDADES MI */
            .contenedor-skills {
                padding: 50px 20px;
            }
            /* seccion PORTFOLIO */
            #portfolio {
                padding: 50px 0;
            }
            #portfolio .fila {
                display: block;
            }
            #portfolio .fila .proyecto {
                margin: 10px auto;
            }
            /* seccion CONTACTO */
            #contacto {
                padding: 50px 15px;
            }
            #contacto .contenedor-form .mitad {
                margin-bottom: 15px;
                display: block;
            }
            #contacto .contenedor-form .mitad input {
                width: 100%;
                margin-bottom: 15px;
            }
        }

